# pdfnest-worker

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  example.run_dev.sh  install.sh  main.py  pyproject.toml  requirements.txt  run_dev.sh  run_prod.sh  stop.sh
app/: main.py
app/api/landing/: router.py
app/api/landing/templates/: landing.html
app/api/tools/analyzer/: document.py  models.py  router.py  utils.py
app/api/tools/editor/: document.py  models.py  router.py  service.py  utils.py
app/api/tools/markup/: document.py  models.py  router.py  utils.py
app/api/tools/metadata/: document.py  models.py  router.py  utils.py
app/api/tools/office_to_pdf/: router.py  service.py  utils.py
app/api/tools/office_to_pdf/converters/: excel.py  powerpoint.py  word.py
app/api/tools/pdf_to_office/: __init__.py  models.py
app/api/tools/pdf_to_office/converters/: __init__.py
app/api/tools/redact/: document.py  models.py  router.py  utils.py
app/api/tools/render/: renderer.py  router.py  service.py
app/api/tools/sign/: document.py  models.py  router.py
app/core/: broker.py  config.py  redis.py  storage.py
app/jobs/: actors.py  broker.py  models.py  router.py  store.py
