[project]
name = "pdfnest-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    # PDF
    "pymupdf",
    # Images
    "pillow",
    # OCR
    "pytesseract",
    # DOCX/XLSX/PPTX
    "python-docx",
    "pdf2docx",
    "pandas",
    "openpyxl",
    "camelot-py",
    "pdfplumber",
    "python-pptx",
    # System monitoring
    "psutil",
]
