[project]
name = "pdfnest-worker"
version = "0.1.0"
description = "PDFNest worker service"
requires-python = ">=3.12"
dependencies = [
  "uvicorn[standard]",
  "dramatiq[redis]",
  "python-multipart",
  "booktype>=1.5",
  "pymupdf>=1.28.0",
  "pillow>=12.3.0",
  "psutil>=7.2.2",
  "pytesseract>=0.3.13",
  "camelot>=12.6.29",
  "docx>=0.2.4",
  "pandas>=3.0.3",
  "pdf2docx>=0.5.13",
  "pdfplumber>=0.11.10",
  "pydantic>=2.13.4",
  "starlette>=1.3.1",
  "fastapi>=0.139.2",
  "redis>=8.0.1",
  "python-pptx>=1.0.2",
  "python-dotenv>=1.2.2",
]
